Fixed contact section overflown

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -24,6 +24,10 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+	width:100%;
+}
+
 body {
 	font-size: 16px;
 	line-height: 24px;
